--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li></ol>
 <ul>
-<li>이광민</li>
-<li>임다현</li></ul>
-<h2>WEB이란 무엇인가?</h2>나는야 <strong>이<u>광민</u></strong> 
+<li>강아지</li>
+<li>고양이</li></ul>
+<h2>WEB이란 무엇인가?</h2>나는야 <strong>강<u>아지</u></strong> 
 <p>밥을 엄청 많이먹지.</p><p style="margin-top:45px;">
 그중에서 자장면을 좋아하지.</p> <br>
 
